DevOCL/src/objects/CLQ_Rules_Inspected__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_Description_Comments__c</fullName>
        <label>Description / Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Domain_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Domain Rule</label>
        <referenceTo>CLQ_Domain_Rule__c</referenceTo>
        <relationshipLabel>Rules Inspected</relationshipLabel>
        <relationshipName>Rules_Inspected</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Rules Inspected object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Findings_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Findings</label>
        <referenceTo>CLQ_Findings__c</referenceTo>
        <relationshipLabel>Rules Inspected</relationshipLabel>
        <relationshipName>Rules_Inspected_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection No</label>
        <referenceTo>CLQ_Inspection__c</referenceTo>
        <relationshipLabel>Rules Inspected</relationshipLabel>
        <relationshipName>Rules_Inspected</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Result__c</fullName>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Room_Space__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room/Space</label>
        <referenceTo>CLQ_Room_Space__c</referenceTo>
        <relationshipLabel>Rules Inspected</relationshipLabel>
        <relationshipName>Rules_Inspected</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rule</label>
        <referenceTo>CLQ_Rule__c</referenceTo>
        <relationshipLabel>Rules Inspected</relationshipLabel>
        <relationshipName>Rules_Inspected</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rules Inspected</label>
    <nameField>
        <displayFormat>RI#-{000000}</displayFormat>
        <label>Rules Inspected No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rules Inspected</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>